--- a/index.html
+++ b/index.html
@@ -34,9 +34,95 @@
         </ul>
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <h1>Awesome tools for Designer & Developer.</h1>
+            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+            <form>
+                <input type="text" placeholder="find more than 430+ tools...">
+                <button type="submit">Search</button>
+            </form>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Most Popular Tools</h2>
+            <p>Tools for the best Designers and Developers most popularly used in the world</p>
+            <ul>
+                <li>
+                    <h3>FIGMA</h3>
+                    <p>Free</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Sketch</h3>
+                    <p>Trial & Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Visual Studio Code</h3>
+                    <p>Free</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Notion</h3>
+                    <p>Free & Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Slack</h3>
+                    <p>Free & Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Invision</h3>
+                    <p>Free & Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+            </ul>
+            <button>Load more</button>
+        </section>
+        <section>
+            <h2>Trusted more than 150+ brand</h2>
+            <ul>
+                <li><a href="#">Microsoft</a></li>
+                <li><a href="#">Google</a></li>
+                <li><a href="#">slack</a></li>
+                <li><a href="#">WordPress</a></li>
+            </ul>
+        </section>
         <section></section>
         <section></section>
         <section></section>
