--- a/index.html
+++ b/index.html
@@ -123,9 +123,78 @@
                 <li><a href="#">WordPress</a></li>
             </ul>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <h2>Newcomer Tools</h2>
+            <p>Wow! see the latest update of the most recommended tools from reliable designers and developers</p>
+            <button>Explore more</button>
+            <ul>
+                <li>
+                    <h3>Zeplin</h3>
+                    <p>Free & Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>PHPStorm</h3>
+                    <p>Free</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Toolbox</h3>
+                    <p>Free</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+                <li>
+                    <h3>Procreate</h3>
+                    <p>Paid</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="#">Visit</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <button></button>
+            <h3>Ronald Richards</h3>
+            <p>Product Manager</p>
+            <p>
+                Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. 
+                Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt 
+                Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo 
+                sint non. Occaecat aute officia excepteur non laboris id qui ad.
+            </p>
+            <button></button>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Become a contributor?</h2>
+            <p>Join us and get tips & tricks to become a great Designer and Developer</p>
+            <form>
+                <input type="text" placeholder="Enter your email...">
+                <button type="submit">Join Us</button>
+            </form>
+        </section>
     </main>
     <footer>
 
