--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,187 +18,224 @@
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <header>
-        <a href="#">antools.</a>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">My Collections</a></li>
-                <li><a href="#">Blog</a></li>
+    <header class="header">
+        <a class="logo" href="#">antools.</a>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">My Collections</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
+        <ul class="auth-list">
+            <li class="auth-item"><a class="auth-link" href="#">Login</a></li>
+            <li class="auth-item"><a class="auth-link" href="#">Sign Up</a></li>
         </ul>
     </header>
-    <main>
-        <section>
-            <h1>Awesome tools for Designer & Developer.</h1>
-            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
-            <form>
-                <input type="text" placeholder="find more than 430+ tools...">
-                <button type="submit">Search</button>
+    <main class="main">
+        <section class="hero">
+            <h1 class="hero-title">Awesome tools for Designer & Developer.</h1>
+            <p class="hero-description">Antool is a web collection of information on paid or free Design and Development
+                tools</p>
+            <form class="hero-form">
+                <input class="hero-input" type="text" placeholder="find more than 430+ tools...">
+                <button class="hero-button" type="submit">Search</button>
             </form>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+            <ul class="social-list">
+                <li class="social-item"></li>
+                <li class="social-item"></li>
+                <li class="social-item"></li>
             </ul>
         </section>
-        <section>
-            <h2>Most Popular Tools</h2>
-            <p>Tools for the best Designers and Developers most popularly used in the world</p>
-            <ul>
-                <li>
-                    <h3>FIGMA</h3>
-                    <p>Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+        <section class="popular-tools">
+            <h2 class="popular-tools-title">Most Popular Tools</h2>
+            <p class="popular-tools-description">Tools for the best Designers and Developers most popularly used in the
+                world</p>
+            <ul class="card-list">
+                <li class="card-item">
+                    <h3 class="card-title">FIGMA</h3>
+                    <p class="card-price">Free</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
-                <li>
-                    <h3>Sketch</h3>
-                    <p>Trial & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                <li class="card-item">
+                    <h3 class="card-title">Sketch</h3>
+                    <p class="card-price">Trial & Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
-                <li>
-                    <h3>Visual Studio Code</h3>
-                    <p>Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                <li class="card-item">
+                    <h3 class="card-title">Visual Studio Code</h3>
+                    <p class="card-price">Free</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
-                <li>
-                    <h3>Notion</h3>
-                    <p>Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                <li class="card-item">
+                    <h3 class="card-title">Notion</h3>
+                    <p class="card-price">Free & Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
-                <li>
-                    <h3>Slack</h3>
-                    <p>Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                <li class="card-item">
+                    <h3 class="card-title">Slack</h3>
+                    <p class="card-price">Free & Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
-                <li>
-                    <h3>Invision</h3>
-                    <p>Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
+                <li class="card-item">
+                    <h3 class="card-title">Invision</h3>
+                    <p class="card-price">Free & Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
                     </ul>
-                    <a href="#">Visit</a>
-                </li>
-            </ul>
-            <button>Load more</button>
-        </section>
-        <section>
-            <h2>Trusted more than 150+ brand</h2>
-            <ul>
-                <li><a href="#">Microsoft</a></li>
-                <li><a href="#">Google</a></li>
-                <li><a href="#">slack</a></li>
-                <li><a href="#">WordPress</a></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Newcomer Tools</h2>
-            <p>Wow! see the latest update of the most recommended tools from reliable designers and developers</p>
-            <button>Explore more</button>
-            <ul>
-                <li>
-                    <h3>Zeplin</h3>
-                    <p>Free & Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <a href="#">Visit</a>
-                </li>
-                <li>
-                    <h3>PHPStorm</h3>
-                    <p>Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <a href="#">Visit</a>
-                </li>
-                <li>
-                    <h3>Toolbox</h3>
-                    <p>Free</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <a href="#">Visit</a>
-                </li>
-                <li>
-                    <h3>Procreate</h3>
-                    <p>Paid</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <a href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
             </ul>
+            <button class="popular-tools-button">Load more</button>
         </section>
-        <section>
-            <button></button>
-            <h3>Ronald Richards</h3>
-            <p>Product Manager</p>
-            <p>
-                Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. 
-                Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt 
-                Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo 
+        <section class="trusted">
+            <h2 class="trusted-title">Trusted more than 150+ brand</h2>
+            <ul class="trusted-list">
+                <li class="trusted-item"><a class="trusted-link" href="#">Microsoft</a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#">Google</a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#">slack</a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#">WordPress</a></li>
+            </ul>
+        </section>
+        <section class="newcomer">
+            <h2 class="newcomer-title">Newcomer Tools</h2>
+            <p class="newcomer-description">Wow! see the latest update of the most recommended tools from reliable
+                designers and developers</p>
+            <button class="newcomer-button">Explore more</button>
+            <ul class="newcomer-list">
+                <li class="newcomer-item">
+                    <h3 class="nlist-title">Zeplin</h3>
+                    <p class="nlist-price">Free & Paid</p>
+                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
+                    </ul>
+                    <a class="nlist-link" href="#">Visit</a>
+                </li>
+                <li class="newcomer-item">
+                    <h3 class="nlist-title">PHPStorm</h3>
+                    <p class="nlist-price">Free</p>
+                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
+                    </ul>
+                    <a class="nlist-link" href="#">Visit</a>
+                </li>
+                <li class="newcomer-item">
+                    <h3 class="nlist-title">Toolbox</h3>
+                    <p class="nlist-price">Free</p>
+                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
+                    </ul>
+                    <a class="nlist-link" href="#">Visit</a>
+                </li>
+                <li class="newcomer-item">
+                    <h3 class="nlist-title">Procreate</h3>
+                    <p class="nlist-price">Paid</p>
+                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <ul class="card-actions">
+                        <li class="action-icon"></li>
+                        <li class="action-icon"></li>
+                    </ul>
+                    <a class="nlist-link" href="#">Visit</a>
+                </li>
+            </ul>
+        </section>
+        <section class="our-team">
+            <button class="slider-button"></button>
+            <img class="our-team-img" src="#" alt="Ronald Richards">
+            <ul class="our-team-list">
+                <li class="our-team-item"><h3 class="our-team-name">Ronald Richards</h3></li>
+                <li class="our-team-item"><p class="our-team-job">Product Manager</p></li>
+            </ul>
+            <p class="our-team-description">
+                Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do.
+                Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt
+                Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo
                 sint non. Occaecat aute officia excepteur non laboris id qui ad.
             </p>
-            <button></button>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+            <button class="slider-button"></button>
+            <ul class="our-team-nav">
+                <li class="team-nav-item"></li>
+                <li class="team-nav-item"></li>
+                <li class="team-nav-item"></li>
             </ul>
         </section>
-        <section>
-            <h2>Become a contributor?</h2>
-            <p>Join us and get tips & tricks to become a great Designer and Developer</p>
-            <form>
-                <input type="text" placeholder="Enter your email...">
-                <button type="submit">Join Us</button>
+        <section class="contributor">
+            <h2 class="contributor-title">Become a contributor?</h2>
+            <p class="contributor-description">Join us and get tips & tricks to become a great Designer and Developer</p>
+            <form class="contributor-form">
+                <input class="contributor-input" type="text" placeholder="Enter your email...">
+                <button class="contributor-button" type="submit">Join Us</button>
             </form>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <h3 class="footer-title">antools</h3>
+        <p class="footer-copyright">Copyright 2021. Antools</p>
+        <p class="footer-description">Antool is a web collection of information on paid or free Design and Development tools</p>
+        <address class="address">
+            <ul class="address-list">
+                <li class="address-item">
+                    <p class="item-title">Contact Us</p>
+                    <ul class="item-list">
+                        <li class="item-list-item"><a class="item-link" href="#">+621987463</a></li>
+                        <li class="item-list-item"><a class="item-link" href="#">M Building, No.10 A</a></li>
+                        <li class="item-list-item"><a class="item-link" href="#">antools@awesome.com</a></li>
+                    </ul>
+                </li>
+                <li class="address-item">
+                    <p class="item-title">Categories</p>
+                    <ul class="item-list">
+                        <li class="item-list-item"><a class="item-link" href="#">Design</a></li>
+                        <li class="item-list-item"><a class="item-link" href="#">Development</a></li>
+                    </ul>
+                </li>
+                <li class="address-item">
+                    <p class="item-title">Company Info</p>
+                    <ul class="item-list">
+                        <li class="item-list-item"><a class="item-link" href="#">About Us</a></li>
+                        <li class="item-list-item"><a class="item-link" href="#">Our Partners</a></li>
+                        <li class="item-list-item"><a class="item-link" href="#">Blog</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
+
 </html>
