--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                 <li class="address-item">
                     <p class="item-title">Contact Us</p>
                     <ul class="item-list">
-                        <li class="item-list-item"><a class="item-link" href="#">+621987463</a></li>
+                        <li class="item-list-item"><a class="item-link" href="tel:+621987463">+621987463</a></li>
                         <li class="item-list-item"><a class="item-link" href="#">M Building, No.10 A</a></li>
-                        <li class="item-list-item"><a class="item-link" href="#">antools@awesome.com</a></li>
+                        <li class="item-list-item"><a class="item-link" href="mailto:antools@awesome.com">antools@awesome.com</a></li>
                     </ul>
                 </li>
                 <li class="address-item">
