images, text styles

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <p class="hero-description">Antool is a web collection of information on paid or free Design and Development
                 tools</p>
             <form class="hero-form">
-                <input class="hero-input" type="text" placeholder="find more than 430+ tools...">
-                <button class="hero-button" type="submit">Search</button>
+                <input class="input" type="text" placeholder="find more than 430+ tools...">
+                <button class="button" type="submit">Search</button>
             </form>
             <ul class="social-list">
                 <li class="social-item"></li>
@@ -53,8 +53,8 @@
             </ul>
         </section>
         <section class="popular-tools">
-            <h2 class="popular-tools-title">Most Popular Tools</h2>
-            <p class="popular-tools-description">Tools for the best Designers and Developers most popularly used in the
+            <h2 class="section-title">Most Popular Tools</h2>
+            <p class="section-description">Tools for the best Designers and Developers most popularly used in the
                 world</p>
             <ul class="card-list">
                 <li class="card-item">
@@ -123,10 +123,10 @@
         <section class="trusted">
             <h2 class="trusted-title">Trusted more than 150+ brand</h2>
             <ul class="trusted-list">
-                <li class="trusted-item"><a class="trusted-link" href="#">Microsoft</a></li>
-                <li class="trusted-item"><a class="trusted-link" href="#">Google</a></li>
-                <li class="trusted-item"><a class="trusted-link" href="#">slack</a></li>
-                <li class="trusted-item"><a class="trusted-link" href="#">WordPress</a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#"></a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#"></a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#"></a></li>
+                <li class="trusted-item"><a class="trusted-link" href="#"></a></li>
             </ul>
         </section>
         <section class="newcomer">
@@ -136,50 +136,50 @@
             <button class="newcomer-button">Explore more</button>
             <ul class="newcomer-list">
                 <li class="newcomer-item">
-                    <h3 class="nlist-title">Zeplin</h3>
-                    <p class="nlist-price">Free & Paid</p>
-                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h3 class="card-title">Zeplin</h3>
+                    <p class="card-price">Free & Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <ul class="card-actions">
                         <li class="action-icon"></li>
                         <li class="action-icon"></li>
                     </ul>
-                    <a class="nlist-link" href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
                 <li class="newcomer-item">
-                    <h3 class="nlist-title">PHPStorm</h3>
-                    <p class="nlist-price">Free</p>
-                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h3 class="card-title">PHPStorm</h3>
+                    <p class="card-price">Free</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <ul class="card-actions">
                         <li class="action-icon"></li>
                         <li class="action-icon"></li>
                     </ul>
-                    <a class="nlist-link" href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
                 <li class="newcomer-item">
-                    <h3 class="nlist-title">Toolbox</h3>
-                    <p class="nlist-price">Free</p>
-                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h3 class="card-title">Toolbox</h3>
+                    <p class="card-price">Free</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <ul class="card-actions">
                         <li class="action-icon"></li>
                         <li class="action-icon"></li>
                     </ul>
-                    <a class="nlist-link" href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
                 <li class="newcomer-item">
-                    <h3 class="nlist-title">Procreate</h3>
-                    <p class="nlist-price">Paid</p>
-                    <p class="nlist-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h3 class="card-title">Procreate</h3>
+                    <p class="card-price">Paid</p>
+                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <ul class="card-actions">
                         <li class="action-icon"></li>
                         <li class="action-icon"></li>
                     </ul>
-                    <a class="nlist-link" href="#">Visit</a>
+                    <a class="card-link" href="#">Visit</a>
                 </li>
             </ul>
         </section>
         <section class="our-team">
             <button class="slider-button"></button>
-            <img class="our-team-img" src="#" alt="Ronald Richards">
+            <img class="our-team-img" src="./images/ronald-richards.png" alt="Ronald Richards">
             <ul class="our-team-list">
                 <li class="our-team-item"><h3 class="our-team-name">Ronald Richards</h3></li>
                 <li class="our-team-item"><p class="our-team-job">Product Manager</p></li>
@@ -198,16 +198,16 @@
             </ul>
         </section>
         <section class="contributor">
-            <h2 class="contributor-title">Become a contributor?</h2>
-            <p class="contributor-description">Join us and get tips & tricks to become a great Designer and Developer</p>
+            <h2 class="section-title">Become a contributor?</h2>
+            <p class="section-description">Join us and get tips & tricks to become a great Designer and Developer</p>
             <form class="contributor-form">
-                <input class="contributor-input" type="text" placeholder="Enter your email...">
-                <button class="contributor-button" type="submit">Join Us</button>
+                <input class="input" type="text" placeholder="Enter your email...">
+                <button class="button" type="submit">Join Us</button>
             </form>
         </section>
     </main>
     <footer class="footer">
-        <h3 class="footer-title">antools</h3>
+        <h3 class="logo">antools.</h3>
         <p class="footer-copyright">Copyright 2021. Antools</p>
         <p class="footer-description">Antool is a web collection of information on paid or free Design and Development tools</p>
         <address class="address">
